<resources>
    <string name="app_name">Real State App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_verification_number">Enter Verification Number</string>
    <string name="continues">Continue</string>
    <string name="india_contact_prefix_number">+91</string>
    <string name="property_expert">Property Expert</string>
    <string name="verification_details">VERIFY DETAILS</string>
    <string name="enter_otp_number">Enter otp pin</string>
    <string name="enter_verification_code">Enter OTP Pin</string>
    <string name="changed_phone_number">Change Phone Number</string>
    <string name="resent_otp">Resent Otp</string>
    <string name="otp_image">otp_image</string>
    <string name="what_s_your_name">what\'s your name?</string>
    <string name="so_that_we_know_how_to_call_you">So that we know how to call you</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="where_are_you_living">Where are you living?</string>
    <string name="so_you_can_find_houses_according_to_your_city">So you can find houses according to your city</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">ADD</string>
    <string name="profile">Profile</string>
    <string name="add_house">Add House</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="enter_description">Enter Description</string>
    <string name="enter_price">Enter Price</string>
    <string name="select_price_type">Select Price Type</string>
    <string name="select_bhk">Select BHK</string>
    <string name="select_bedroom">Select Bedroom</string>
    <string name="select_bathroom">Select Bathroom</string>
    <string name="select_property_type">Select Property type</string>
    <string name="select_residential_type">Select Residential Type</string>
    <string name="you_have_to_sell_rent">you have to sell/rent</string>
    <string name="uploadedhouseimage">UploadedHouseImage</string>
    <string name="house_image" />
    <string name="deleteHouse">delete</string>
    <string name="cancelHome">Cancel</string>
    <string name="bathroom">Bathroom</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="description">Description</string>
    <string name="city">City</string>
    <string-array name="state">
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir (union territory)</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Ladakh (union territory)</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry (union territory)</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string name="zip_code">Zip Code</string>
    <string name="country">Country</string>
    <string name="property_type">Property Type</string>
    <string name="residential_type">Residential Type</string>
    <string name="bhk">BHK</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="india">India</string>
    <string name="oops_you_haven_t_added_house_yet">Oops!!! You haven\'t added HOUSE yet</string>
    <string name="search_house">Search House</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="budget">Budget</string>
    <string name="filter">Filter</string>
    <string name="find_the_home_you_ll_love">Find the home you\'ll love</string>
    <string name="you_have_to_Buy_rent">You have to Buy/Rent</string>
    <string name="clear">Clear</string>
    <string name="property_not_found">Property Not Found</string>
    <string name="connect_to_whatsapp">Connect to Whatsapp</string>
    <string name="dial_to_owner">Dial To Owner</string>
    <string name="according_to_your_state">According to your State</string>
    <string name="top_houses">Top House</string>
    <string name="according_to_your_city">According to your City</string>
    <string name="latest">Latest</string>
    <string-array name="andhra_pradesh_cities">
        <item>Adoni</item>
        <item>Amaravati</item>
        <item>Anantapur</item>
        <item>Chandragiri</item>
        <item>Chittoor</item>
        <item>Dowlaiswaram</item>
        <item>Eluru</item>
        <item>Guntur</item>
        <item>Kadapa</item>
        <item>Kakinada</item>
        <item>Kurnool</item>
        <item>Machilipatnam</item>
        <item>Nagarjunakoṇḍa</item>
        <item>Rajahmundry</item>
        <item>Srikakulam</item>
        <item>Tirupati</item>
        <item>Vijayawada</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
        <item>Yemmiganur</item>
    </string-array>
    <string-array name="arunachal_pradesh_cities">
        <item>Itanagar</item>
    </string-array>
    <string-array name="assam_cities">
        <item>Dhuburi</item>
        <item>Dibrugarh</item>
        <item>Dispur</item>
        <item>Guwahati</item>
        <item>Jorhat</item>
        <item>Nagaon</item>
        <item>Sibsagar</item>
        <item>Silchar</item>
        <item>Tezpur</item>
        <item>Tinsukia</item>
    </string-array>
    <string-array name="bihar_cities">
        <item>Ara</item>
        <item>Baruni</item>
        <item>Begusarai</item>
        <item>Bettiah</item>
        <item>Bhagalpur</item>
        <item>Bihar Sharif</item>
        <item>Bodh Gaya</item>
        <item>Buxar</item>
        <item>Chapra</item>
        <item>Darbhanga</item>
        <item>Dehri</item>
        <item>Dinapur Nizamat</item>
        <item>Gaya</item>
        <item>Hajipur</item>
        <item>Jamalpur</item>
        <item>Katihar</item>
        <item>Madhubani</item>
        <item>Motihari</item>
        <item>Munger</item>
        <item>Muzaffarpur</item>
        <item>Patna</item>
        <item>Purnia</item>
        <item>Pusa</item>
        <item>Saharsa</item>
        <item>Samastipur</item>
        <item>Sasaram</item>
        <item>Sitamarhi</item>
        <item>Siwan</item>
    </string-array>
    <string-array name="chandigarh_cities">
        <item>Chandigard</item>
    </string-array>
    <string-array name="chhattisgard_cities">
        <item>Ambikapur</item>
        <item>Bhilai</item>
        <item>Bilaspur</item>
        <item>Dhamtari</item>
        <item>Durg</item>
        <item>Jagdalpur</item>
        <item>Raipur</item>
        <item>Rajnandgaon</item>
    </string-array>
    <string-array name="dadra_and_nagar_haveli_cities">
        <item>Silvassa</item>
    </string-array>
    <string-array name="daman_and_Diu_cities">
        <item>Daman</item>
        <item>Diu</item>
    </string-array>
    <string-array name="delhi_cities">
        <item>Delhi</item>
        <item>New_Delhi</item>
    </string-array>
    <string-array name="goa_cities">
        <item>Madgaon</item>
        <item>Panji</item>
    </string-array>
    <string-array name="gujarat_cities">
        <item>Ahmadabad</item>
        <item>Amreli</item>
        <item>Bharuch</item>
        <item>Bhavnagar</item>
        <item>Bhuj</item>
        <item>Dwarka</item>
        <item>Gandhinagar</item>
        <item>Godhra</item>
        <item>Jamnagar</item>
        <item>Junagadh</item>
        <item>Kandla</item>
        <item>Khambhat</item>
        <item>Kheda</item>
        <item>Mahesana</item>
        <item>Morvi</item>
        <item>Nadiad</item>
        <item>Navsari</item>
        <item>Okha</item>
        <item>Palanpur</item>
        <item>Patan</item>
        <item>Porbandar</item>
        <item>Rajkot</item>
        <item>Surat</item>
        <item>Surendranagar</item>
        <item>Valsad</item>
        <item>Veraval</item>
    </string-array>
    <string-array name="haryana_cities">
        <item>Ambala</item>
        <item>Bhiwani</item>
        <item>Chandigarh</item>
        <item>Faridabad</item>
        <item>Firozpur Jhirka</item>
        <item>Gurgaon</item>
        <item>Hansi</item>
        <item>Hisar</item>
        <item>Jind</item>
        <item>Kaithal</item>
        <item>Karnal</item>
        <item>Kurukshetra</item>
        <item>Panipat</item>
        <item>Pehowa</item>
        <item>Rewari</item>
        <item>Rohtak</item>
        <item>Sirsa</item>
        <item>Sonipat</item>
    </string-array>
    <string-array name="himachal_pradesh_cities">
        <item>Bilaspur</item>
        <item>Chamba</item>
        <item>Dalhousie</item>
        <item>Dharmshala</item>
        <item>Hamirpur</item>
        <item>Kangra</item>
        <item>Kullu</item>
        <item>Mandi</item>
        <item>Nahan</item>
        <item>Shimla</item>
        <item>Uma</item>
    </string-array>
    <string-array name="jammu_and_kashmir_cities">
        <item>Anantnag</item>
        <item>Baramula</item>
        <item>Doda</item>
        <item>Gulmarg</item>
        <item>Jammu</item>
        <item>Kathua</item>
        <item>Punch</item>
        <item>Rajauri</item>
        <item>Srinagar</item>
        <item>Udhampur</item>
    </string-array>
    <string-array name="jharkhand_cities">
        <item>Bokaro</item>
        <item>Chaibasa</item>
        <item>Deoghar</item>
        <item>Dhanbad</item>
        <item>Dumka</item>
        <item>Giridih</item>
        <item>Hazaribag</item>
        <item>Jamshedpur</item>
        <item>Jharia</item>
        <item>Rajmahal</item>
        <item>Ranchi</item>
        <item>Saraikela</item>
    </string-array>
    <string-array name="karnataka_cities">
        <item>Badami</item>
        <item>Ballari</item>
        <item>Bangalore</item>
        <item>Belgavi</item>
        <item>Bhadravati</item>
        <item>Bidar</item>
        <item>Chikkamagaluru</item>
        <item>Chitradurga</item>
        <item>Davangere</item>
        <item>Halebid</item>
        <item>Hassan</item>
        <item>Hubballi-Dharwad</item>
        <item>Kalaburagi</item>
        <item>Kolar</item>
        <item>Madikeri</item>
        <item>Mandya</item>
        <item>Mangaluru</item>
        <item>Mysuru</item>
        <item>Raichur</item>
        <item>Shivamogga</item>
        <item>Shravanabelagola</item>
        <item>Shrirangapattana</item>
        <item>Tumkuru</item>
    </string-array>
</resources>