<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.user.FilterFragment">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_clear"
                android:layout_width="100dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="end"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp"
                android:layout_height="28dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/clear"
                    android:textColor="@color/cream_blue"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/property_type"
                android:textColor="@color/cream_blue"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filter_property_type_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <AutoCompleteTextView
                    android:id="@+id/filter_property_type_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/you_have_to_Buy_rent"
                    android:inputType="none"
                    android:textColor="@color/cream_black"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/residential_type"
                android:textColor="@color/cream_blue"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filter_residential_type_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/filter_residential_type_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/select_residential_type"
                    android:inputType="none"
                    android:textColor="@color/cream_black"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/bhk"
                android:textColor="@color/cream_blue"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filter_bhk_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_height="match_parent">

                <AutoCompleteTextView
                    android:id="@+id/filter_bhk_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/select_bhk"
                    android:inputType="none"
                    android:textColor="@color/cream_black"
                    android:textSize="24sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/state"
                android:layout_marginTop="16dp"
                android:textColor="@color/cream_blue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filter_state_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_height="match_parent">

                <AutoCompleteTextView
                    android:id="@+id/filter_state_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/select_state"
                    android:inputType="none"
                    android:textColor="@color/cream_black"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/city"
                android:layout_marginTop="16dp"
                android:textColor="@color/cream_blue"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filter_city_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:layout_height="match_parent">

                <AutoCompleteTextView
                    android:id="@+id/filter_city_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:hint="@string/select_city"
                    android:inputType="none"
                    android:textColor="@color/cream_black"
                    android:textSize="24sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/budget"
                android:textColor="@color/cream_blue"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/filter_min_input"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_marginEnd="16dp"
                    android:layout_height="match_parent">

                    <AutoCompleteTextView
                        android:id="@+id/filter_min_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito"
                        android:hint="@string/min_price"
                        android:inputType="none"
                        android:textColor="@color/cream_black"
                        android:textSize="24sp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/filter_max_input"
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:layout_height="match_parent">

                    <AutoCompleteTextView
                        android:id="@+id/filter_max_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito"
                        android:hint="@string/max_price"
                        android:inputType="none"
                        android:textColor="@color/cream_black"
                        android:textSize="24sp"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/filter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/cream_blue"
                android:fontFamily="@font/nunito_bold"
                android:padding="18dp"
                android:text="@string/filter"
                android:textColor="@color/cream_white"
                android:textSize="18sp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>