<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.auth.PersonalInformationFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cream_white"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/what_s_your_name"
                        android:textColor="@color/cream_blue"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/so_that_we_know_how_to_call_you"
                        android:textColor="@color/cream_blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito"
                            android:hint="@string/enter_your_name"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColor="@color/cream_black"
                            android:textSize="24sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:elevation="10dp"
                app:cardCornerRadius="10dp" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="28sp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/nunito_bold"
                        android:textStyle="bold"
                        android:textColor="@color/cream_blue"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/where_are_you_living" />

                    <TextView
                        android:textSize="18sp"
                        android:fontFamily="@font/nunito_bold"
                        android:textStyle="bold"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:textColor="@color/cream_blue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:text="@string/so_you_can_find_houses_according_to_your_city" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_state"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        app:errorEnabled="true"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_height="match_parent">

                        <AutoCompleteTextView
                            android:id="@+id/text_state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito"
                            android:hint="@string/select_state"
                            android:inputType="none"
                            android:textColor="@color/cream_black"
                            android:textSize="24sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_city"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        app:errorEnabled="true"
                        android:layout_marginRight="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_height="match_parent">

                        <AutoCompleteTextView
                            android:id="@+id/text_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito"
                            android:hint="@string/select_city"
                            android:inputType="none"
                            android:textColor="@color/cream_black"
                            android:textSize="24sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/cream_blue"
                android:fontFamily="@font/nunito_bold"
                android:padding="18dp"
                android:text="@string/submit"
                android:textColor="@color/cream_white"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit"
        android:visibility="invisible"
        style="@style/SpinKitView.Large.CubeGrid"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:SpinKit_Color="@color/cream_blue"/>
</FrameLayout>